--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -17,23 +17,21 @@
 
     <!-- Theme Style -->
     <link rel="stylesheet" type="text/css" href="~/style.css">
-    
+
     <!-- Favicon and touch icons  -->
     <link rel="shortcut icon" href="~/assets/icon/favicon.png">
     <link rel="apple-touch-icon-precomposed" href="~/assets/icon/apple-touch-icon-158-precomposed.png">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+      <script src="~/https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="~/https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
 
 <!-- <body class="front-page no-sidebar site-layout-full-width menu-has-cart header-sticky header-style-5"> -->
 <body class="front-page /*one-page*/  no-sidebar site-layout-full-width menu-has-cart header-sticky header-style-5">
-
     <div id="top"></div>
-
     <div id="wrapper" class="animsition">
         <div id="page" class="clearfix">
             <div id="site-header-wrap">
@@ -47,35 +45,72 @@
                                         <img src="~/assets/img/logo-light.png" alt="Construction" data-retina="assets/img/logo-light@2x.png" data-width="204" data-height="30">
                                     </a>
                                 </div>
-                            </div><!-- /#site-logo -->
+                            </div>
+                            <!-- /#site-logo -->
 
-                            <div class="mobile-button"><span></span></div><!-- //mobile menu button -->
+                            <div class="mobile-button"><span></span></div>
+                            <!-- //mobile menu button -->
 
                             <nav id="main-nav" class="main-nav">
                                 <ul class="menu">
-                                    <li class="current-menu-item"><a asp-controller="Home", asp-action="Index">Home</a></li>
-                                    <li><a asp-controller="About" asp-action="Index">About</a></li>
+                                    <li class="current-menu-item"><a href="#top">Home</a></li>
+                                    <li><a href="about.html">About</a></li>
                                     <li class="menu-item menu-item-has-children">
                                         <a href="#team">Services</a>
                                         <ul class="sub-menu">
-                                            <li class="menu-item"><a asp-controller="Services" asp-action="Construction">Construction</a></li>
-                                            <li class="menu-item"><a asp-controller="Services" asp-action="Renovation">Renovation</a></li>
-                                            <li class="menu-item"><a asp-controller="Services" asp-action="Consulting">Consulting</a></li>
-                                            <li class="menu-item"><a asp-controller="Services" asp-action="Architecture">Architecture</a></li>
-                                            <li class="menu-item"><a asp-controller="Services" asp-action="Electrical">Electrical</a></li>
+                                            <li class="menu-item">
+                                                <a href="#">Construction</a>
+                                                <ul class="sub-menu2">
+                                                    <li class="menu-item"><a href="service-renovation.html">Service1</a></li>
+                                                    <li class="menu-item"><a href="service-consulting.html">Service2</a></li>
+                                                    <li class="menu-item"><a href="service-architecture.html">Service3</a></li>
+                                                </ul>
+                                            </li>
+                                            <li class="menu-item">
+                                                <a href="service-renovation.html">Renovation</a>
+                                                <ul class="sub-menu2">
+                                                    <li class="menu-item"><a href="service-renovation.html">Service4</a></li>
+                                                    <li class="menu-item"><a href="service-consulting.html">Service5</a></li>
+                                                    <li class="menu-item"><a href="service-architecture.html">Service6</a></li>
+                                                </ul>
+                                            </li>
+                                            <li class="menu-item">
+                                                <a href="service-consulting.html">Consulting</a>
+                                                <ul class="sub-menu2">
+                                                    <li class="menu-item"><a href="service-renovation.html">Service8</a></li>
+                                                    <li class="menu-item"><a href="service-consulting.html">Service9</a></li>
+                                                    <li class="menu-item"><a href="service-architecture.html">Service10</a></li>
+                                                </ul>
+                                            </li>
+                                            <li class="menu-item">
+                                                <a href="service-architecture.html">Architecture</a>
+                                                <ul class="sub-menu2">
+                                                    <li class="menu-item"><a href="service-renovation.html">Service8</a></li>
+                                                    <li class="menu-item"><a href="service-consulting.html">Service9</a></li>
+                                                    <li class="menu-item"><a href="service-architecture.html">Service10</a></li>
+                                                </ul>
+                                            </li>
+                                            <li class="menu-item">
+                                                <a href="service-electrical.html">Electrical</a>
+                                                <ul class="sub-menu2">
+                                                    <li class="menu-item"><a href="service-renovation.html">Service8</a></li>
+                                                    <li class="menu-item"><a href="service-consulting.html">Service9</a></li>
+                                                    <li class="menu-item"><a href="service-architecture.html">Service10</a></li>
+                                                </ul>
+                                            </li>
                                         </ul>
                                     </li>
                                     <li><a href="portfolio.html">Portfolio</a></li>
                                     <li><a href="blog.html">Blog</a></li>
                                     <li><a href="contact.html">Contact</a></li>
                                 </ul>
-                            </nav><!-- /#main-nav -->
+                            </nav>
+                            <!-- /#main-nav -->
 
                             <div class="nav-top-cart-wrapper">
                                 <a class="nav-cart-trigger" href="#">
                                     <span class="fa fa-language" aria-hidden="true"></span>
                                 </a>
-
                                 <div class="nav-shop-cart">
                                     <div class="widget_shopping_cart_content">
                                         <ul class="cart_list product_list_widget ">
@@ -96,6 +131,7 @@
                                             </li>
                                         </ul>
                                         <!-- /.product_list_widget -->
+
                                     </div>
                                 </div>
                             </div>
@@ -104,15 +140,17 @@
                     </div>
                 </header>
                 <!-- /#site-header -->
+
             </div>
             <!-- /#site-header-wrap -->
 
             @RenderBody()
 
+            <!-- Footer -->
             <footer id="footer">
                 <div id="footer-widgets" class="container style-1">
                     <div class="row">
-                        <div class="col-md-3">
+                        <div class="col-md-8">
                             <div class="widget widget_about margin-bottom-25">
                                 <div class="margin-bottom-35">
                                     <img src="~/assets/img/logo-light@2x.png" width="204" height="30" alt="image" />
@@ -128,24 +166,6 @@
                             </div>
                         </div>
                         <div class="col-md-3">
-                            <div class="widget widget_tag_cloud">
-                                <h2 class="widget-title">Popular tags</h2>
-                                <div class="tagcloud">
-                                    <a href="#">Architectural</a>
-                                    <a href="#">Builder</a>
-                                    <a href="#">Fire</a>
-                                    <a href="#">Building</a>
-                                    <a href="#">Garden design</a>
-                                    <a href="#">Interior</a>
-                                    <a href="#">Marketing events</a>
-                                    <a href="#">ThemeForest</a>
-                                    <a href="#">Construction</a>
-                                    <a href="#">Exterior</a>
-                                    <a href="#">Highway</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
                             <div class="widget widget_links">
                                 <h2 class="widget-title">Useful links</h2>
                                 <ul class="links col2">
@@ -158,55 +178,6 @@
                                     <li><a href="contact.html">Contact</a></li>
                                     <li class="last"><a href="#">Conditions</a></li>
                                 </ul>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="widget widget_instagram">
-                                <h2 class="widget-title">Instagram photos</h2>
-                                <div class="instagram-wrap clearfix g10">
-                                    <div class="instagram_badge_image">
-                                        <a href="#">
-                                            <div class="item">
-                                                <img src="~/assets/img/instagram/1.jpg" alt="image" />
-                                            </div>
-                                        </a>
-                                    </div>
-                                    <div class="instagram_badge_image">
-                                        <a href="#">
-                                            <div class="item">
-                                                <img src="~/assets/img/instagram/2.jpg" alt="image" />
-                                            </div>
-                                        </a>
-                                    </div>
-                                    <div class="instagram_badge_image">
-                                        <a href="#">
-                                            <div class="item">
-                                                <img src="~/assets/img/instagram/3.jpg" alt="image" />
-                                            </div>
-                                        </a>
-                                    </div>
-                                    <div class="instagram_badge_image">
-                                        <a href="#">
-                                            <div class="item">
-                                                <img src="~/assets/img/instagram/4.jpg" alt="image" />
-                                            </div>
-                                        </a>
-                                    </div>
-                                    <div class="instagram_badge_image">
-                                        <a href="#">
-                                            <div class="item">
-                                                <img src="~/assets/img/instagram/5.jpg" alt="image" />
-                                            </div>
-                                        </a>
-                                    </div>
-                                    <div class="instagram_badge_image">
-                                        <a href="#">
-                                            <div class="item">
-                                                <img src="~/assets/img/instagram/6.jpg" alt="image" />
-                                            </div>
-                                        </a>
-                                    </div>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -226,11 +197,13 @@
                             </ul>
                         </div>
                         <!-- /.bottom-bar-menu -->
+
                     </div>
                 </div>
             </div>
         </div>
         <!-- /#page -->
+
     </div>
     <!-- /#wrapper -->
 
@@ -244,7 +217,7 @@
     <script type="text/javascript" src="~/assets/js/countTo.js"></script>
     <script type="text/javascript" src="~/assets/js/fitText.js"></script>
     <script type="text/javascript" src="~/assets/js/flexslider.js"></script>
-    <script type="text/javascript" src="~/lib/vegas/vegas.js"></script>
+    <script type="text/javascript" src="~/assets/js/vegas.js"></script>
     <script type="text/javascript" src="~/assets/js/owlCarousel.js"></script>
     <script type="text/javascript" src="~/assets/js/cube.portfolio.js"></script>
     <script type="text/javascript" src="~/assets/js/main.js"></script>
@@ -264,9 +237,6 @@
     <script type="text/javascript" src="~/includes/rev-slider/js/extensions/revolution.extension.parallax.min.js"></script>
     <script type="text/javascript" src="~/includes/rev-slider/js/extensions/revolution.extension.slideanims.min.js"></script>
     <script type="text/javascript" src="~/includes/rev-slider/js/extensions/revolution.extension.video.min.js"></script>
-
-
 </body>
 </html>
-
 
