--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
                                                 <ul class="sub-menu2">
                                                     <li class="menu-item"><a asp-controller="Services" asp-action="Renovation">Service1</a></li>
                                                     <li class="menu-item"><a asp-controller="Services" asp-action="Construction">Service2</a></li>
-                                                    <li class="menu-item"><a href="service-architecture.html">Service3</a></li>
+                                                    <li class="menu-item"><a asp-controller="Services" asp-action="Architecture">Service3</a></li>
                                                 </ul>
                                             </li>
                                             <li class="menu-item">
