--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -68,27 +68,27 @@
                                                 </ul>
                                             </li>
                                             <li class="menu-item">
-                                                <a href="service-renovation.html">Renovation</a>
+                                                <a asp-controller="Services" asp-action="Renovation">Renovation</a>
                                                 <ul class="sub-menu2">
-                                                    <li class="menu-item"><a href="service-renovation.html">Service4</a></li>
-                                                    <li class="menu-item"><a href="service-consulting.html">Service5</a></li>
-                                                    <li class="menu-item"><a href="service-architecture.html">Service6</a></li>
+                                                    <li class="menu-item"><a asp-controller="Services" asp-action="Renovation">Service4</a></li>
+                                                    <li class="menu-item"><a asp-controller="Services" asp-action="Consulting">Service5</a></li>
+                                                    <li class="menu-item"><a asp-controller="Services" asp-action="Architecture">Service6</a></li>
                                                 </ul>
                                             </li>
                                             <li class="menu-item">
-                                                <a href="service-consulting.html">Consulting</a>
+                                                <a asp-controller="Services" asp-action="Consulting">Consulting</a>
                                                 <ul class="sub-menu2">
-                                                    <li class="menu-item"><a href="service-renovation.html">Service8</a></li>
-                                                    <li class="menu-item"><a href="service-consulting.html">Service9</a></li>
-                                                    <li class="menu-item"><a href="service-architecture.html">Service10</a></li>
+                                                    <li class="menu-item"><a asp-controller="Services" asp-action="Renovation">Service8</a></li>
+                                                    <li class="menu-item"><a asp-controller="Services" asp-action="Consulting">Service9</a></li>
+                                                    <li class="menu-item"><a asp-controller="Services" asp-action="Architecture">Service10</a></li>
                                                 </ul>
                                             </li>
                                             <li class="menu-item">
-                                                <a href="service-architecture.html">Architecture</a>
+                                                <a asp-controller="Services" asp-action="Architecture">Architecture</a>
                                                 <ul class="sub-menu2">
-                                                    <li class="menu-item"><a href="service-renovation.html">Service8</a></li>
-                                                    <li class="menu-item"><a href="service-consulting.html">Service9</a></li>
-                                                    <li class="menu-item"><a href="service-architecture.html">Service10</a></li>
+                                                    <li class="menu-item"><a asp-controller="Services" asp-action="Renovation">Service8</a></li>
+                                                    <li class="menu-item"><a asp-controller="Services" asp-action="Consulting">Service9</a></li>
+                                                    <li class="menu-item"><a asp-controller="Services" asp-action="Architecture">Service10</a></li>
                                                 </ul>
                                             </li>
                                             <li class="menu-item">
