--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -90,16 +90,16 @@
                                                 </ul>
                                             </li>
                                             <li class="menu-item">
-                                                <a href="service-electrical.html">Electrical</a>
+                                                <a asp-controller="Services" asp-action="Electrical">Electrical</a>
                                                 <ul class="sub-menu2">
-                                                    <li class="menu-item"><a href="service-renovation.html">Service8</a></li>
-                                                    <li class="menu-item"><a href="service-consulting.html">Service9</a></li>
-                                                    <li class="menu-item"><a href="service-architecture.html">Service10</a></li>
+                                                    <li class="menu-item"><a asp-controller="Services" asp-action="Renovation">Service8</a></li>
+                                                    <li class="menu-item"><a asp-controller="Services" asp-action="Consulting">Service9</a></li>
+                                                    <li class="menu-item"><a asp-controller="Services" asp-action="Architecture">Service10</a></li>
                                                 </ul>
                                             </li>
                                         </ul>
                                     </li>
-                                    <li><a href="portfolio.html">Portfolio</a></li>
+                                    <li><a asp-controller="Portfolio" asp-action="Index">Portfolio</a></li>
                                     <li><a href="blog.html">Blog</a></li>
                                     <li><a href="contact.html">Contact</a></li>
                                 </ul>
