--- a/ConstructionSite/Views/Portfolio/Index.cshtml
+++ b/ConstructionSite/Views/Portfolio/Index.cshtml
@@ -50,16 +50,16 @@
                     <div class="inner">
                         <div class="grid">
                             <figure class="effect-zoe">
-                                <img src="assets/img/projects/1.jpg" alt="image" />
+                                <img src="~/assets/img/projects/1.jpg" alt="image" />
                                 <figcaption>
                                     <div>
-                                        <h2><a target="_blank" href="portfolio-main.html">LUXURY BUILDINGS</a></h2>
+                                        <h2><a target="_blank" asp-controller="Portfolio" asp-action="Detail">LUXURY BUILDINGS</a></h2>
                                         <p>Construction</p>
                                     </div>
                                 </figcaption>
                             </figure>
                         </div>
-                        <a class="project-zoom cbp-lightbox" href="assets/img/projects/1-full.jpg" data-title="LUXURY BUILDINGS">
+                        <a class="project-zoom cbp-lightbox" href="~assets/img/projects/1-full.jpg" data-title="LUXURY BUILDINGS">
                             <i class="fa fa-arrows-alt"></i>
                         </a>
                     </div>
@@ -72,16 +72,16 @@
                     <div class="inner">
                         <div class="grid">
                             <figure class="effect-honey">
-                                <img src="assets/img/projects/2.jpg" alt="image" />
+                                <img src="~/assets/img/projects/2.jpg" alt="image" />
                                 <figcaption>
                                     <div>
-                                        <h2><a target="_blank" href="portfolio-main.html">LUXURY BUILDINGS</a></h2>
+                                        <h2><a target="_blank" asp-controller="Portfolio" asp-action="Detail">LUXURY BUILDINGS</a></h2>
                                         <p>Construction</p>
                                     </div>
                                 </figcaption>
                             </figure>
                         </div>
-                        <a class="project-zoom cbp-lightbox" href="assets/img/projects/2-full.jpg" data-title="LUXURY BUILDINGS">
+                        <a class="project-zoom cbp-lightbox" href="~assets/img/projects/2-full.jpg" data-title="LUXURY BUILDINGS">
                             <i class="fa fa-arrows-alt"></i>
                         </a>
                     </div>
@@ -94,16 +94,16 @@
                     <div class="inner">
                         <div class="grid">
                             <figure class="effect-oscar">
-                                <img src="assets/img/projects/2.jpg" alt="image" />
+                                <img src="~/assets/img/projects/2.jpg" alt="image" />
                                 <figcaption>
                                     <div>
-                                        <h2><a target="_blank" href="portfolio-main.html">LUXURY BUILDINGS</a></h2>
+                                        <h2><a target="_blank" asp-controller="Portfolio" asp-action="Detail">LUXURY BUILDINGS</a></h2>
                                         <p>Construction</p>
                                     </div>
                                 </figcaption>
                             </figure>
                         </div>
-                        <a class="project-zoom cbp-lightbox" href="assets/img/projects/3-full.jpg" data-title="LUXURY BUILDINGS">
+                        <a class="project-zoom cbp-lightbox" href="~assets/img/projects/3-full.jpg" data-title="LUXURY BUILDINGS">
                             <i class="fa fa-arrows-alt"></i>
                         </a>
                     </div>
@@ -116,16 +116,16 @@
                     <div class="inner">
                         <div class="grid">
                             <figure class="effect-sadie">
-                                <img src="assets/img/projects/1.jpg" alt="image" />
+                                <img src="~/assets/img/projects/1.jpg" alt="image" />
                                 <figcaption>
                                     <div>
-                                        <h2><a target="_blank" href="portfolio-main.html">LUXURY BUILDINGS</a></h2>
+                                        <h2><a target="_blank" asp-controller="Portfolio" asp-action="Detail">LUXURY BUILDINGS</a></h2>
                                         <p>Construction</p>
                                     </div>
                                 </figcaption>
                             </figure>
                         </div>
-                        <a class="project-zoom cbp-lightbox" href="assets/img/projects/4-full.jpg" data-title="LUXURY BUILDINGS">
+                        <a class="project-zoom cbp-lightbox" href="~assets/img/projects/4-full.jpg" data-title="LUXURY BUILDINGS">
                             <i class="fa fa-arrows-alt"></i>
                         </a>
                     </div>
@@ -138,16 +138,16 @@
                     <div class="inner">
                         <div class="grid">
                             <figure class="effect-zoe">
-                                <img src="assets/img/projects/1.jpg" alt="image" />
+                                <img src="~/assets/img/projects/1.jpg" alt="image" />
                                 <figcaption>
                                     <div>
-                                        <h2><a target="_blank" href="portfolio-main.html">LUXURY BUILDINGS</a></h2>
+                                        <h2><a target="_blank" asp-controller="Portfolio" asp-action="Detail">LUXURY BUILDINGS</a></h2>
                                         <p>Construction</p>
                                     </div>
                                 </figcaption>
                             </figure>
                         </div>
-                        <a class="project-zoom cbp-lightbox" href="assets/img/projects/5-full.jpg" data-title="LUXURY BUILDINGS">
+                        <a class="project-zoom cbp-lightbox" href="~assets/img/projects/5-full.jpg" data-title="LUXURY BUILDINGS">
                             <i class="fa fa-arrows-alt"></i>
                         </a>
                     </div>
@@ -160,16 +160,16 @@
                     <div class="inner">
                         <div class="grid">
                             <figure class="effect-honey">
-                                <img src="assets/img/projects/2.jpg" alt="image" />
+                                <img src="~/assets/img/projects/2.jpg" alt="image" />
                                 <figcaption>
                                     <div>
-                                        <h2><a target="_blank" href="portfolio-main.html">LUXURY BUILDINGS</a></h2>
+                                        <h2><a target="_blank" asp-controller="Portfolio" asp-action="Detail">LUXURY BUILDINGS</a></h2>
                                         <p>Construction</p>
                                     </div>
                                 </figcaption>
                             </figure>
                         </div>
-                        <a class="project-zoom cbp-lightbox" href="assets/img/projects/6-full.jpg" data-title="LUXURY BUILDINGS">
+                        <a class="project-zoom cbp-lightbox" href="~assets/img/projects/6-full.jpg" data-title="LUXURY BUILDINGS">
                             <i class="fa fa-arrows-alt"></i>
                         </a>
                     </div>
@@ -182,16 +182,16 @@
                     <div class="inner">
                         <div class="grid">
                             <figure class="effect-oscar">
-                                <img src="assets/img/projects/1.jpg" alt="image" />
+                                <img src="~/assets/img/projects/1.jpg" alt="image" />
                                 <figcaption>
                                     <div>
-                                        <h2><a target="_blank" href="portfolio-main.html">LUXURY BUILDINGS</a></h2>
+                                        <h2><a target="_blank" asp-controller="Portfolio" asp-action="Detail">LUXURY BUILDINGS</a></h2>
                                         <p>Construction</p>
                                     </div>
                                 </figcaption>
                             </figure>
                         </div>
-                        <a class="project-zoom cbp-lightbox" href="assets/img/projects/7-full.jpg" data-title="LUXURY BUILDINGS">
+                        <a class="project-zoom cbp-lightbox" href="~assets/img/projects/7-full.jpg" data-title="LUXURY BUILDINGS">
                             <i class="fa fa-arrows-alt"></i>
                         </a>
                     </div>
@@ -204,16 +204,16 @@
                     <div class="inner">
                         <div class="grid">
                             <figure class="effect-sadie">
-                                <img src="assets/img/projects/1.jpg" alt="image" />
+                                <img src="~/assets/img/projects/1.jpg" alt="image" />
                                 <figcaption>
                                     <div>
-                                        <h2><a target="_blank" href="portfolio-main.html">LUXURY BUILDINGS</a></h2>
+                                        <h2><a target="_blank" asp-controller="Portfolio" asp-action="Detail">LUXURY BUILDINGS</a></h2>
                                         <p>Construction</p>
                                     </div>
                                 </figcaption>
                             </figure>
                         </div>
-                        <a class="project-zoom cbp-lightbox" href="assets/img/projects/8-full.jpg" data-title="LUXURY BUILDINGS">
+                        <a class="project-zoom cbp-lightbox" href="~assets/img/projects/8-full.jpg" data-title="LUXURY BUILDINGS">
                             <i class="fa fa-arrows-alt"></i>
                         </a>
                     </div>
