--- a/ConstructionSite/Views/Portfolio/Detail.cshtml
+++ b/ConstructionSite/Views/Portfolio/Detail.cshtml
@@ -29,33 +29,33 @@
                                             <ul class="slides">
                                                 <li class="flex-active-slide">
                                                     <a class="zoom" href="assets/img/gallery/1.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                                    <img src="assets/img/gallery/1.jpg" alt="image" />
+                                                    <img src="~/assets/img/gallery/1.jpg" alt="image" />
                                                 </li>
                                                 <li class="flex-active-slide">
                                                     <a class="zoom" href="assets/img/gallery/2.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                                    <img src="assets/img/gallery/2.jpg" alt="image" />
+                                                    <img src="~/assets/img/gallery/2.jpg" alt="image" />
                                                 </li>
                                                 <li class="flex-active-slide">
                                                     <a class="zoom" href="assets/img/gallery/1.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                                    <img src="assets/img/gallery/1.jpg" alt="image" />
+                                                    <img src="~/assets/img/gallery/1.jpg" alt="image" />
                                                 </li>
                                                 <li class="flex-active-slide">
                                                     <a class="zoom" href="assets/img/gallery/2.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                                    <img src="assets/img/gallery/2.jpg" alt="image" />
+                                                    <img src="~/assets/img/gallery/2.jpg" alt="image" />
                                                 </li>
                                                 <li class="flex-active-slide">
                                                     <a class="zoom" href="assets/img/gallery/1.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                                    <img src="assets/img/gallery/1.jpg" alt="image" />
+                                                    <img src="~/assets/img/gallery/1.jpg" alt="image" />
                                                 </li>
                                             </ul>
                                         </div>
                                         <div id="wprt-carousel" class="flexslider">
                                             <ul class="slides">
-                                                <li><img src="assets/img/gallery/1.jpg" alt="image"></li>
-                                                <li><img src="assets/img/gallery/2.jpg" alt="image"></li>
-                                                <li><img src="assets/img/gallery/1.jpg" alt="image"></li>
-                                                <li><img src="assets/img/gallery/2.jpg" alt="image"></li>
-                                                <li><img src="assets/img/gallery/1.jpg" alt="image"></li>
+                                                <li><img src="~/assets/img/gallery/1.jpg" alt="image"></li>
+                                                <li><img src="~/assets/img/gallery/2.jpg" alt="image"></li>
+                                                <li><img src="~/assets/img/gallery/1.jpg" alt="image"></li>
+                                                <li><img src="~/assets/img/gallery/2.jpg" alt="image"></li>
+                                                <li><img src="~/assets/img/gallery/1.jpg" alt="image"></li>
                                             </ul>
                                         </div>
                                     </div>
