--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -101,7 +101,7 @@
                                     </li>
                                     <li><a asp-controller="Portfolio" asp-action="Index">Portfolio</a></li>
                                     <li><a asp-controller="Blog" asp-action="Index">Blog</a></li>
-                                    <li><a href="contact.html">Contact</a></li>
+                                    <li><a asp-controller="Contact" asp-action="Index">Contact</a></li>
                                 </ul>
                             </nav>
                             <!-- /#main-nav -->
