--- a/ConstructionSite/Views/Services/Electrical.cshtml
+++ b/ConstructionSite/Views/Services/Electrical.cshtml
@@ -55,7 +55,7 @@
                                 <div class="cbp-item">
                                     <div class="item-wrap">
                                         <a class="zoom" href="assets/img/projects/1.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                        <img src="assets/img/projects/1.jpg" alt="image" />
+                                        <img src="~/assets/img/projects/1.jpg" alt="image" />
                                     </div>
                                 </div>
                                 <!--/.cbp-item -->
@@ -63,7 +63,7 @@
                                 <div class="cbp-item">
                                     <div class="item-wrap">
                                         <a class="zoom" href="assets/img/projects/2.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                        <img src="assets/img/projects/2.jpg" alt="image" />
+                                        <img src="~/assets/img/projects/2.jpg" alt="image" />
                                     </div>
                                 </div>
                                 <!--/.cbp-item -->
@@ -71,7 +71,7 @@
                                 <div class="cbp-item">
                                     <div class="item-wrap">
                                         <a class="zoom" href="assets/img/projects/3.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                        <img src="assets/img/projects/3.jpg" alt="image" />
+                                        <img src="~/assets/img/projects/3.jpg" alt="image" />
                                     </div>
                                 </div>
                                 <!--/.cbp-item -->
@@ -79,7 +79,7 @@
                                 <div class="cbp-item">
                                     <div class="item-wrap">
                                         <a class="zoom" href="assets/img/projects/1.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                        <img src="assets/img/projects/1.jpg" alt="image" />
+                                        <img src="~/assets/img/projects/1.jpg" alt="image" />
                                     </div>
                                 </div>
                                 <!--/.cbp-item -->
